<resources>
    <string name="app_name">Data Mahasiswa</string>
    <string name="name">Nama lengkap</string>
    <string name="alamat">Alamat Rumah</string>
    <string name="email">Email</string>
    <string name="phone">No.Telephone</string>
    <string name="save">Simpan</string>
    <string name="jurusan">Ketik Jurusan</string>
    <string name="nik">Ketik NIK </string>


    <string-array name="items_option">
        <item>Edit</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>
</resources>